force-app/main/default/objects/pstar__Credible_Field_Mapping__mdt/pstar__Credible_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Credible Field Mapping</label>
    <pluralLabel>Credible Field Mappings</pluralLabel>
</CustomObject>