force-app/main/default/objects/pstar__Credible_Field_Mapping__mdt/fields/pstar__Credible_Code__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Code__c</fullName>
    <label>Credible Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>