force-app/main/default/objects/pstar__Credible_Field_Mapping__mdt/fields/pstar__Field_Category__c.field-meta.xml
<CustomField>
    <fullName>pstar__Field_Category__c</fullName>
    <label>Field Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Ethnicity</fullName>
            </value>
            <value>
                <fullName>Marital Status</fullName>
            </value>
            <value>
                <fullName>Sexual Orientation</fullName>
            </value>
            <value>
                <fullName>Gender Identity</fullName>
            </value>
            <value>
                <fullName>Assigned Sex At Birth</fullName>
            </value>
            <value>
                <fullName>Preferred Pronouns</fullName>
            </value>
            <value>
                <fullName>Living Situation</fullName>
            </value>
            <value>
                <fullName>Smoking Status</fullName>
            </value>
            <value>
                <fullName>Preferred Language</fullName>
            </value>
            <value>
                <fullName>Primary Written Language</fullName>
            </value>
            <value>
                <fullName>Program Type</fullName>
            </value>
            <value>
                <fullName>Peer Type</fullName>
            </value>
            <value>
                <fullName>Preferred Contact</fullName>
            </value>
            <value>
                <fullName>Forensic Status</fullName>
            </value>
            <value>
                <fullName>Client Signature Source</fullName>
            </value>
            <value>
                <fullName>Release Of Information</fullName>
            </value>
            <value>
                <fullName>Referral Type</fullName>
            </value>
            <value>
                <fullName>No Admit Reason</fullName>
            </value>
            <value>
                <fullName>Employment Status</fullName>
            </value>
            <value>
                <fullName>Status Reason</fullName>
            </value>
            <value>
                <fullName>Bullying Last Occurrence</fullName>
            </value>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Referring Qualifiers</fullName>
            </value>
            <value>
                <fullName>Domain Focus Area Scores</fullName>
            </value>
            <value>
                <fullName>Staff Peer Involvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>